--- a/causal_effect.qmd
+++ b/causal_effect.qmd
@@ -36,3 +36,5 @@ ch10_data |>
   scale_y_continuous(breaks = c(0, 1), labels = c("No", "Yes"))
 ```
 
+## **Summary**
+Using the results of a voting experiment in Michigan in 2006, we seek to forecast the causal effect on voter participation of sending postcards in the Texas gubernatorial general election of 2026.
